# DirtyMeshSlicer

./: CMakeLists.txt  DirtyMeshSlicer.cpp  DirtyMeshSlicer.h  README.md  main.cpp
PQPLib/: ReadMe.txt
QMeshLib/: OpenMesh.cpp  OpenMesh.h  QSurfaceMesh.cpp  QSurfaceMesh.h
QMeshLib/QMesh/: QMeshPatch.cpp  QMeshPatch.h
Utils/MarchingSquare/: MarchingSquareBin.cpp  MarchingSquareBin.h  VSA.cpp
